logs/core/luit-1.1.1-final-test-030220181912.out
###############################
###############################
Making check in man
make[1]: Entering directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[1]: Nothing to be done for 'check'.
make[1]: Leaving directory '/lfskernel/sources/boot/X11/app/luit-1.1.1/man'
make[1]: Entering directory '/lfskernel/sources/boot/X11/app/luit-1.1.1'
  CC     sys.o
sys.c: In function 'allocatePty':
sys.c:339:11: error: implicit declaration of function 'posix_openpt' [-Werror=implicit-function-declaration]
     pty = posix_openpt(O_RDWR);
           ^~~~~~~~~~~~
sys.c:339:11: warning: nested extern declaration of 'posix_openpt' [-Wnested-externs]
cc1: some warnings being treated as errors
make[1]: *** [Makefile:412: sys.o] Error 1
make[1]: Leaving directory '/lfskernel/sources/boot/X11/app/luit-1.1.1'
make: *** [Makefile:434: check-recursive] Error 1
